flicker fix (again), can't vote till all answers submitted fix, reduce click fix

--- a/stylesheets/cards.css
+++ b/stylesheets/cards.css
@@ -31,8 +31,8 @@ div.card-selected {
 
 div.main-card-area {
     height: 100%;
-    width: 96%;
-    margin-left: 4%;
+    width: 97%;
+    margin-left: 3%;
 }
 
 div.card-area {
